[package]
name = "zenvpush"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
indicatif = "0.17"
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
git2 = "0.20.0"
dotenv = "0.15"
dialoguer = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
